--- a/css/main.css
+++ b/css/main.css
@@ -1341,4 +1341,111 @@
     .hat__container--footer {
       flex-direction: column;
       align-items: center; } }
-  
+
+/* Contact Us */
+
+  .contact-in {
+    width: 80%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 0px 10px 0px #333a44; }
+        
+  .contact-map {
+    width: 100%;
+    height: auto;
+    flex: 50%; }
+
+  .contact-map iframe {
+    width: 100%;
+    height: 100%;}
+        
+  .contact-form {
+    width: 100%;
+    height: auto;
+    flex: 50%;
+    padding: 30px;
+    text-align: center };
+        
+  .contact-form h1{
+    margin-bottom: 10px; }
+    
+  .contact-form-txt {
+    width: 100%;
+    height: 40px;
+    color: #333a44;
+    border: 1px solid #333a44;
+    border-radius: 50px;
+    outline: none;
+    margin-bottom: 20px;
+    padding: 15px; }
+
+  .contact-form-txt::placeholder {
+    color: #333a44; }
+    
+  .contact-form-textarea {
+    width: 100%;
+    height: 130px;
+    color: #333a44;
+    border: 1px solid #333a44;
+    border-radius: 10px;
+    outline: none;
+    margin-bottom: 20px;
+    padding: 15px; }
+
+  .contact-form-textarea::placeholder {
+    color: #333a44; }
+
+  .contact-form-btn {
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background: #333a44;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 0;
+    cursor: pointer;
+    font-size: 18px; }
+
+/* FAQs */
+
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+
+  .box {
+    width: 350px;
+    margin: auto;
+    background: #495567;
+    border-radius: 7px;
+    box-shadow: 1px 2px 4px rgba (0, 0, 0, .3); }
+
+  .box .heading {
+    background: #7800CF;
+    border-radius: 7px 7px 0px 0px;
+    padding: 10px;
+    color: #fff;
+    text-align: center;
+    font-family: "Rubik"; }
+
+  .faqs {
+    padding: 0px 20px 20px; }
+
+  ::webkit-details-narker {
+    float: right;
+    margin-top: 3px; }
+
+  details {
+    background: #413f3f;
+    padding: 10px 20px;
+    border-radius: 7px;
+    margin-top: 20px;
+    font-family: "Rubik";
+    font-size: 14px;
+    letter-spacing: 1px; }
+
+  details summary {
+    outline: none; }
